hsmc-macros/tests/ui/t9_8_unknown_target.stderr
error[E0046]: not all trait items implemented, missing: `NonExistent`
  --> tests/ui/t9_8_unknown_target.rs:21:1
   |
10 | / statechart! {
11 | | M {
12 | |     context: Ctx;
13 | |     events: Ev;
...  |
19 | | }
   | |_- `NonExistent` from trait
20 |
21 |   impl MActions for MActionContext<'_> {}
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ missing `NonExistent` in implementation
